<?xml version="1.0"?>
<package format="2">
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>
  	Package to send multiple pick/place goals to Udacity home service robot.
  </description>

  <maintainer email="croomjm@gmail.com">Jordan Croom</maintainer>
  <license>MIT</license>
  <author>Jordan Croom</author>
  
  <!--adapted from ROS tutorial found at the URL below
  http://wiki.ros.org/navigation/Tutorials/SendingSimpleGoals
  -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
