<?xml version="1.0"?>
<package format="2">
  <name>wall_follower</name>
  <version>0.0.0</version>
  <description>
    Package to autonomously navigate turtle bot using simple wall-following algorithm.
  </description>
  <maintainer email="croomjm@gmail.com">Jordan Croom</maintainer>
  <!--adapted from SW written by author below as part of Udacity robotics nanodegree-->
  <license>MIT</license>
  <author email="karim@udacity.com">Karim Chamaa</author>
  <url>https://github.com/udacity/RoboND-PathPlanning</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>